<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.odys-z</groupId>
  <artifactId>jserv-album</artifactId>
  <version>0.5.2</version>
  <packaging>jar</packaging>

  <name>jserv-album Maven Webapp</name>
  <url>https://odys-z.github.io</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>

	<!-- Semantics-* is built on javax.servlet -->
	<jetty.version>9.4.45.v20220203</jetty.version>
  </properties>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <scm>
  	<connection>scm:git:git://github.com/odys-z/semantic-jserv.git</connection>
  	<developerConnection>scm:git:odys-z@github.com:odys-z/semantic-jserv.git</developerConnection>
  	<url>https://github.com/odys-z/semantic-jserv</url>
  	<tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <name>Odys Zhou</name>
      <email>odys.zhou@gmail.com</email>
      <organization>odys-z.github.io</organization>
      <organizationUrl>https://odys-z.github.io</organizationUrl>
    </developer>
  </developers>

  <distributionManagement>
  	<snapshotRepository>
  		<id>ossrh</id>
  		<url>https://oss.sonatype.org/content/repositories/snapshots</url>
  		<uniqueVersion>false</uniqueVersion>
  	</snapshotRepository>
  	<repository>
  		<id>ossrh</id>
  		<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
	</repository>
  </distributionManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.3.1</version>
      <scope>test</scope>
    </dependency>

	<dependency>
		<groupId>org.apache.tika</groupId>
		<artifactId>tika-core</artifactId>
		<version>2.2.1</version>
	</dependency>

	<dependency>
		<groupId>org.apache.tika</groupId>
		<artifactId>tika-parsers-standard-package</artifactId>
		<version>2.2.1</version>
	</dependency>

    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
    </dependency>

   	<dependency>
	  <groupId>io.github.odys-z</groupId>
	  <artifactId>semantic.jserv</artifactId>
	  <version>[1.4.4,)</version>
   	</dependency>

	<!--
	<dependency>
	    <groupId>io.github.odys-z</groupId>
	    <artifactId>anclient.java</artifactId>
	    <version>[0.3.0-SNAPSHOT,)</version>
	</dependency>
	-->

	<dependency>
	    <groupId>io.github.odys-z</groupId>
	    <artifactId>album-lib</artifactId>
	    <version>[0.4.17,)</version>
	</dependency>

	<dependency>
	  <groupId>org.xerial</groupId>
	  <artifactId>sqlite-jdbc</artifactId>
	  <version>[3.36.0,)</version>
	</dependency>

	<dependency>
		<groupId>mysql</groupId>
		<artifactId>mysql-connector-java</artifactId>
		<version>[8.0.27,)</version>
	</dependency>
	
	<dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-server</artifactId>
		<version>${jetty.version}</version>
    </dependency>
    <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-servlet</artifactId>
		<version>${jetty.version}</version>
    </dependency>
	<dependency>
		  <groupId>org.eclipse.jetty</groupId>
		  <artifactId>jetty-annotations</artifactId>
		  <version>${jetty.version}</version>
	</dependency>
  </dependencies>

  <build>
    <finalName>jserv-album</finalName>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
     <plugins>
     <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
      </plugin>
        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
      <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
      </plugin>
      <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
      </plugin>
      <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
      </plugin>
      <plugin>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.2</version>
      </plugin>
      <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
      </plugin>


   	  <plugin>
	  	<artifactId>maven-deploy-plugin</artifactId>
	  	<version>2.8.2</version>
	  	<executions>
	  		<execution>
	  			<id>default-deploy</id>
	  			<phase>deploy</phase>
	  			<goals>
	  				<goal>deploy</goal>
	  			</goals>
	  		</execution>
	  	</executions>
	  </plugin>

	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-release-plugin</artifactId>
		<version>2.5.3</version>
		<configuration>
			<localCheckout>true</localCheckout>
			<pushChanges>false</pushChanges>
			<mavenExecutorId>forked-path</mavenExecutorId>
			<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
		</configuration>
		<dependencies>
			<dependency>
				<groupId>org.apache.maven.scm</groupId>
				<artifactId>maven-scm-provider-gitexe</artifactId>
				<version>1.9.5</version>
			</dependency>
		</dependencies>
	  </plugin>

	  <plugin>
		<groupId>org.sonatype.plugins</groupId>
		<artifactId>nexus-staging-maven-plugin</artifactId>
		<version>1.6.7</version>
		<extensions>true</extensions>
		<configuration>
			<serverId>ossrh</serverId>
			<nexusUrl>https://oss.sonatype.org/</nexusUrl>
			<autoReleaseAfterClose>true</autoReleaseAfterClose>
		</configuration>
	  </plugin>

	  <!-- JavaDoc and source attachment -->
	  <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-source-plugin</artifactId>
	      <version>2.2.1</version>
	      <executions>
	        <execution>
	          <id>attach-sources</id>
	          <goals>
	            <goal>jar-no-fork</goal>
	          </goals>
	        </execution>
	      </executions>
	  </plugin>

	  <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-javadoc-plugin</artifactId>
	      <version>2.9.1</version>
	      <executions>
	        <execution>
	          <id>attach-javadocs</id>
	          <goals>
	            <goal>jar</goal>
	          </goals>
	        </execution>
	      </executions>
	      <configuration>
	      	<failOnError>false</failOnError>
	      	<!-- https://stackoverflow.com/a/48511911/7362888
				https://maven.apache.org/plugins/maven-javadoc-plugin/javadoc-mojo.html
	      	-->
	      	<additionalJOption>-Xdoclint:none</additionalJOption>
	      </configuration>
	  </plugin>

	  <plugin>
		<!-- For troubleshooting like
			[ERROR] Failed to execute goal org.apache.maven.plugins:
			maven-compiler-plugin:3.7.0:compile (default-compile) on
			project semantic.jserv: Compilation failure: Compilation failure...

		  see https://dzone.com/articles/publish-your-artifacts-to-maven-central -->
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-gpg-plugin</artifactId>
		<version>1.5</version>
		<executions>
			<execution>
			  <id>semantics.transact</id>
			  <phase>verify</phase>
			  <goals>
				<goal>sign</goal>
			  </goals>
			</execution>
		</executions>
	  </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-shade-plugin</artifactId>
		<version>3.2.2</version>
		<executions>
			<execution>
				<phase>package</phase>
				<goals>
					<goal>shade</goal>
				</goals>
				<configuration>
					<finalName>${project.artifactId}-${project.version}-uber</finalName>
				</configuration>
			</execution>
		</executions>
		<configuration>
			<filters>
				<filter>
					<artifact>*:*</artifact>
					<excludes>
						<exclude>META-INF/*.SF</exclude>
						<exclude>META-INF/*.DSA</exclude>
						<exclude>META-INF/*.RSA</exclude>
					</excludes>
				</filter>
			</filters>
			
			<transformers>
				<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
					<mainClass>io.oz.album.JettyApp</mainClass>
				</transformer>
				<!--
				<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
					<resource>WEB-INF/</resource>
					<file>src/main/webapp/WEB-INF/*</file>
				</transformer>
				-->
			</transformers>
		</configuration>
	  </plugin>
    </plugins>
    
    <resources>
      <resource>
    	<directory>src/main/webapp</directory>
      </resource>
    </resources>
  </build>
</project>
